--- a/renovate.json5
+++ b/renovate.json5
@@ -13,5 +13,18 @@
     "gradle-wrapper",
     "nvm",
     "github-actions",
+    "custom.regex"
+  ],
+  customManagers: [
+    {
+      // Custom manager for Docker image version in version.properties
+      customType: "regex",
+      fileMatch: ["^gradle/libs.versions.toml$"],
+      matchStrings: [
+        'node="(?<currentValue>.*?)"'
+      ],
+      datasourceTemplate: "node-version",
+      versioningTemplate: "node"
+    }
   ],
 }
